# tauri-plugin-open-permission-settings

./: Cargo.toml  LICENSE  README.md  build.rs  package.json
android/: build.gradle.kts
android/src/main/java/: OpenPermissionSettingsPlugin.kt
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: OpenPermissionSettingsPlugin.swift
ios/Tests/PluginTests/: PluginTests.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: open_settings.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
